--- a/hugo.toml
+++ b/hugo.toml
@@ -1,7 +1,7 @@
 baseURL = "http://localhost"
-languageCode = "de-DE"
-title = "Zajac & Leroy Physio"
-theme = "hugo-geekdoc"
+languageCode = 'de-de'
+title = 'Zajac & Leroy Physio'
+theme = 'hugo-geekdoc'
 
 pluralizeListTitles = false
 
@@ -42,7 +42,7 @@ enableRobotsTXT = true
 
   # (Optional, default static/brand.svg) Set the path to a logo for the Geekdoc
   # relative to your 'static/' folder.
-  geekdocLogo = "logo.png"
+  geekdocLogo = "img/logo.png"
 
   # (Optional, default false) Render menu from data file in 'data/menu/main.yaml'.
   # See also https://geekdocs.de/usage/menus/#bundle-menu.
